tests/expectations/parser/program/import_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370028]: Invalid network identifier. The only supported identifier is `.aleo`.
    --> test:2:14
     |
   2 | import hello.leo;
     |              ^^^"""]
